syntax = "proto3";

option csharp_namespace = "Server";

service ServiMoto {
	rpc LogInClient (ClientLookup) returns (ClientService);
	rpc FindCurrentTask (TaskLookup) returns (CurrentTask);
	rpc GetNewTask (TaskLookup) returns (CurrentTask);
	rpc CompleteTask (TaskLookup) returns (Validation);
	rpc LeaveService (ServiceLookup) returns (Validation);
	rpc NewService (TaskLookup) returns (Validation);
	rpc NewTask (TaskInfo) returns (Validation);
}

// Mensagem com dados login do utilizador
message ClientLookup {
	string id = 1;
	string password = 2;
}

// Mensagem com descricao de um nova tarefa
message TaskInfo {
	string servico = 1;
	string descricao = 2;
}

// Mensagem com informação sobre uma tarefa
message TaskLookup {
	string id = 1;
	string servico = 2;
}
// Mensagem com informação sobre tarefa e utilizador
message ServiceLookup {
	string id_task = 1;
	string id_utilizador = 2;
	string servico = 3;
}

// Mensagem para enviar o serviço do client, caso login esteja correto
message ClientService {
	string servico	= 1;
}

// Mensagem com a tarefa atual do utilizador
message CurrentTask {
	string id = 1;
	string descricao = 2;
	string estado = 3;
	string clientId = 4;
}

message Validation {
	bool result = 1;
}